[gd_scene format=3 uid="uid://bbu2d1wtxsce8"]

[ext_resource type="Script" uid="uid://bl0fs2hk53bfj" path="res://Scripts/UI/shop_item.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://cxqub0sfewm4v" path="res://addons/font_auto_size_labels/demo/Anta-Regular.ttf" id="2_font"]
[ext_resource type="Texture2D" uid="uid://ch47vuvvpgyqn" path="res://Assets/Sprites/dollar.png" id="3_coin"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.1, 0.1, 0.12, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.25, 0.25, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button"]
bg_color = Color(0.2, 0.5, 0.3, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_pressed"]
bg_color = Color(0.15, 0.4, 0.25, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_hover"]
bg_color = Color(0.25, 0.6, 0.35, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="ShopItem" type="Control" unique_id=1268398223]
custom_minimum_size = Vector2(0, 100)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 128.0
grow_horizontal = 2
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="." unique_id=1981927833]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel" unique_id=1050858930]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="IconTexture" type="TextureRect" parent="Panel/HBoxContainer" unique_id=1664546030]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.64
texture = ExtResource("3_coin")
expand_mode = 1
stretch_mode = 5

[node name="InfoContainer" type="VBoxContainer" parent="Panel/HBoxContainer" unique_id=42857488]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/separation = 2

[node name="NameLabel" type="Label" parent="Panel/HBoxContainer/InfoContainer" unique_id=1121608874]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 22
text = "Item Name"
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="Panel/HBoxContainer/InfoContainer" unique_id=2128089627]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 14
text = "Item description goes here..."
autowrap_mode = 2
clip_text = true

[node name="StockLabel" type="Label" parent="Panel/HBoxContainer/InfoContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 12
text = "Stock: 3/3"

[node name="BuyContainer" type="VBoxContainer" parent="Panel/HBoxContainer" unique_id=1534946916]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 9
alignment = 1

[node name="PriceContainer" type="HBoxContainer" parent="Panel/HBoxContainer/BuyContainer" unique_id=108069095]
layout_mode = 2
alignment = 1

[node name="CoinIcon" type="TextureRect" parent="Panel/HBoxContainer/BuyContainer/PriceContainer" unique_id=786103054]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("3_coin")
expand_mode = 1
stretch_mode = 5

[node name="PriceLabel" type="Label" parent="Panel/HBoxContainer/BuyContainer/PriceContainer" unique_id=449471993]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "5"

[node name="BuyButton" type="Button" parent="Panel/HBoxContainer/BuyContainer" unique_id=616034622]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 35)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
theme_override_styles/normal = SubResource("StyleBoxFlat_button")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_pressed")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_hover")
text = "Buy"
